# tiny-local-ai

./: .gitignore  AGENTS.md  BENCHMARK-QUICK-START.txt  BENCHMARK.md  OPTIMIZATION.md  README.md  justfile  pyproject.toml  swap
data/: hardware.json  models.json
scripts/: benchmark-optimized.sh  benchmark-prompts.json  benchmark-startup.sh  benchmark.py  doctor.py  download-model.sh  fetch-canirun-data.sh  list-models.sh  llm-client.py  router.py  scrape-canirun-list.sh  serve-dashboard.py  start-dual-servers.sh  start-llm-optimized.sh  start-llm-router.sh  start-llm.sh  stop-llm.sh  swap-completion.bash  swap-completion.zsh  swap-model.py
